test/fail/issue-5897.mo
import { X } "issue-5897/nested";

persistent actor Main {
  type T = X.Y;
};
